--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ python-dotenv = "^1.0.1"
 openai = "^1.45.0"
 pypdf = "^4.3.1"
 scikit-learn = "^1.5.2"
+langchain-cli = "^0.0.30"
 
 
 [build-system]
