--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=sk-proj-WZ1n1By8J4HU04tVeEq5T3BlbkFJIWSlAuqs7V2GCOqL5uje
+OPENAI_API_KEY='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'
